force-app/main/default/objects/Account/fields/CIF_Number__c.field-meta.xml
<CustomField>
    <fullName>CIF_Number__c</fullName>
    <label>CIF Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>