force-app/main/default/objects/Account/fields/Cost_to_Serve__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Serve__c</fullName>
    <label>Cost to Serve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>