force-app/main/default/objects/Account/fields/FICA_CIF_Flag__c.field-meta.xml
<CustomField>
    <fullName>FICA_CIF_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FICA CIF Flag</label>
    <type>Checkbox</type>
</CustomField>