force-app/main/default/objects/Account/fields/FinServ_Length_Of_Relationship__c.field-meta.xml
<CustomField>
    <fullName>FinServ_Length_Of_Relationship__c</fullName>
    <label>Length Of Relationship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>