force-app/main/default/objects/Account/fields/LLC_BI_Total_Direct_Exposure__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI_Total_Direct_Exposure__c</fullName>
    <label>Total Direct Exposure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>