force-app/main/default/objects/Account/fields/Profit_Before_Tax__c.field-meta.xml
<CustomField>
    <fullName>Profit_Before_Tax__c</fullName>
    <label>Profit Before Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>