force-app/main/default/objects/Account/fields/VAPM__c.field-meta.xml
<CustomField>
    <fullName>VAPM__c</fullName>
    <label>VAPM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>